--- a/tests/ecls/file.yml
+++ b/tests/ecls/file.yml
@@ -1,4 +1,5 @@
 root:
   000_file:
+    cluster: thor
     # example to just use a file from cluster
     file: /var/lib/HPCCSystems/mydropzone/noaa/ghcn/daily/by_year/2018.ecl
