--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,7 @@ test_script:
       node --version
       npm --version
   # Run test
-  - npm test
+  - npm run test-ci
   # Run linting
   - npm run lint
 version: "{build}"
