--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "ETL made simple and reproducible.",
   "main": "index.js",
   "scripts": {
-  	"lint": "eslint .",
-    "test": "mocha ./tests/*-test.js",
+    "lint": "eslint .",
+    "test": "mocha --bail --check-leaks --reporter spec ./tests/*-test.js",
+    "test-ci": "istanbul cover node_modules/mocha/bin/_mocha --report lcovonly -- --reporter spec --check-leaks ./tests/*-test.js",
     "integration-test": "mocha ./integration-tests/*-test.js"
   },
   "repository": {
@@ -36,6 +37,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.14.1",
+    "istanbul": "^0.4.5",
     "mocha": "^5.0.0",
     "sinon": "^4.1.6",
     "yaml-cfn": "^0.2.0"
