Improving test coverage.

--- a/tests/mysqlimports/basic.yml
+++ b/tests/mysqlimports/basic.yml
@@ -1,32 +1,32 @@
 root:
-  mysqlimports:
-    "/downloads/test.csv":
-      db_name: testdb
-      bind_address: 127.0.0.1
-      columns: "id,field1,field2"
-      compress: true
-      debug: true
-      debug_check: true
-      debug_info: true
-      default_auth: mysql_native_password
-      default_character_set: utf8
-      delete: true
-      fields_enclosed_by: ""
-      fields_escaped_by: "\\"
-      enable_cleartext_plugin: true
-      fields_optionally_enclosed_by: "'"
-      fields_terminated_by: "\t"
-      force: true
-      ignore_lines: 1
-      ignore: false
-      replace: true
-      lines_terminated_by: "\n"
-      lock_tables: true
-      low_priority: true
-      no_defaults: true
-      port: 3306
-      protocol: TCP
-      silent: true
-      ssl_mode: REQUIRED
-      tls_version: "TLSv1.1,TLSv1.2"
-      use_threads: 4
+  "/downloads/test.csv":
+    db_name: testdb
+    bind_address: 127.0.0.1
+    columns: "id,field1,field2"
+    compress: true
+    debug: true
+    debug_check: true
+    debug_info: true
+    default_auth: mysql_native_password
+    default_character_set: utf8
+    delete: true
+    fields_enclosed_by: ""
+    fields_escaped_by: "\\"
+    enable_cleartext_plugin: true
+    fields_optionally_enclosed_by: "'"
+    fields_terminated_by: "\t"
+    force: true
+    ignore_lines: 1
+    ignore: false
+    replace: true
+    lines_terminated_by: "\n"
+    lock_tables: true
+    low_priority: true
+    no_defaults: true
+    port: 3306
+    protocol: TCP
+    secure_auth: true
+    silent: true
+    ssl_mode: REQUIRED
+    tls_version: "TLSv1.1,TLSv1.2"
+    use_threads: 4
