--- a/tests/mysqls/basic.yml
+++ b/tests/mysqls/basic.yml
@@ -8,7 +8,9 @@ root:
     binary_as_hex: true
     binary_mode: true
     bind_address: 127.0.0.1
+    character_sets_dir: /tmp/
     column_names: "id,field1,field2"
+    column_type_info: true
     comments: "Tis a comment"
     compress: true
     connect_expired_password: true
@@ -18,15 +20,32 @@ root:
     debug_info: true
     default_auth: mysql_native_password
     default_character_set: utf8
+    defaults_extra_file: /tmp/defaults_extra.info
+    defaults_file: /tmp/defaults.info
+    defaults_group_suffix: info
     delimiter: ","
     enable_cleartext_plugin: true
     force: true
+    get_server_public_key: true
+    host: 127.0.0.1
+    local_infile: /tmp/file.csv
+    login_path: mypath
     html: true
     ignore_spaces: true
     line_numbers: 1
+    max_allowed_packet: 10
+    max_join_size: 10
+    named_commands: true
+    net_buffer_length: 256
+    no_auto_rehash: true
     no_beep: true
     no_defaults: true
     one_database: true
+    pager: 100
+    password: foobar
+    pipe: true
+    plugin_dir: /tmp/
+    i_am_a_dummy: true
     port: 3306
     protocol: TCP
     quick: true
@@ -35,14 +54,34 @@ root:
     safe_updates: true
     secure_auth: true
     select_limit: 1000
+    server_public_key_path: /tmp
+    shared_memory_base_name: mem
+    show_warnings: true
+    sigint_ignore: true
     silent: true
+    skip_auto_rehash: true
+    skip_column_names: true
     skip_line_numbers: true
     skip_named_commands: true
-    skip_column_names: true
+    skip_pager: true
+    skip_reconnect: true
+    socket: 123
+    ssl_ca: ca.cert
+    ssl_capath: /tmp
+    ssl_cert: server.cert
+    ssl_cipher: AES128-SHA
+    ssl_crl: crl.cert
+    ssl_crlpath: /tmp
+    ssl_fips_mode: ON
+    ssl_key: server.key
     ssl_mode: REQUIRED
     syslog: true
+    table: mytable
+    tee: /tmp/tee.txt
+    tls_ciphersuites: "suite1:suite2:suite3"
     tls_version: "TLSv1.1,TLSv1.2"
     unbuffered: true
+    user: foobar
     vertical: true
     wait: true
     xml: true
