--- a/tests/commands/basic.yml
+++ b/tests/commands/basic.yml
@@ -2,6 +2,8 @@ root:
   001_test:
     command: gunzip test.gz
     cwd: /var/lib/somedir
+    env:
+      TOTO: titi
     test: "[ -f test.gz ]"
   002_test_fail:
     command: gunzip test.gz
