--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "chai-spies": "^1.0.0",
     "crypto": "^1.0.1",
     "eslint": "^5.15.0",
     "istanbul": "^0.4.5",
