Switching from istanbul to nyc.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,9 @@ node_js:
   - "11.0"
 sudo: false
 script:
-  # Run test script
-  - npm run test-ci
-  # Run linting
-  - npm run lint
+  - npm run test
 after_script:
   - |
     # Upload coverage to coveralls
     npm install --save-dev coveralls@2.13.3
-    coveralls < ./coverage/lcov.info
+    npm run coverage
