--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lib/"
   ],
   "nyc": {
-  	"include": "lib",
+    "include": "lib",
     "check-coverage": true,
     "lines": 90,
     "statements": 90,
@@ -59,6 +59,7 @@
     "eslint": "^5.15.0",
     "istanbul": "^0.4.5",
     "mocha": "^5.0.0",
+    "mock-stdin": "^0.3.1",
     "nyc": "^13.3.0",
     "sinon": "^4.1.6",
     "yaml-cfn": "^0.2.0"
