Fixed appveyor config.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,7 +25,5 @@ test_script:
       node --version
       npm --version
   # Run test
-  - npm run test-ci
-  # Run linting
-  - npm run lint
+  - npm run test
 version: "{build}"
