--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ETL made simple and reproducible.",
   "main": "index.js",
   "scripts": {
+  	"release": "release-it",
     "lint": "eslint lib/ tests/",
     "fix": "eslint lib/ tests/ --fix",
     "pretest": "npm run lint",
@@ -59,6 +60,7 @@
     "eslint": "^5.16.0",
     "mocha": "^5.0.0",
     "nyc": "^14.1.1",
+    "release-it": "^12.3.0",
     "sinon": "^4.1.6",
     "yaml-cfn": "^0.2.1"
   }
