--- a/package.json
+++ b/package.json
@@ -65,18 +65,20 @@
   },
   "homepage": "https://github.com/lpezet/etl-js#readme",
   "dependencies": {
-    "@types/jest": "^25.2.1",
     "JSONPath": "^0.11.2",
     "log4js": "^6.1.2",
     "ssh2": "^0.8.4"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.1",
     "@types/chai": "^4.1.6",
     "@types/chai-as-promised": "^7.1.0",
     "@types/node": "^10.17.17",
     "@types/sinon": "^5.0.5",
     "@types/sinon-chai": "^3.2.2",
     "@types/ssh2": "^0.5.43",
+    "@typescript-eslint/eslint-plugin": "~2.31.0",
+    "@typescript-eslint/parser": "~2.3.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-spies": "^1.0.0",
@@ -84,10 +86,12 @@
     "doctoc": "^1.4.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^22.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^5.0.0",
     "nyc": "^14.1.1",
+    "prettier": "^1.19.0",
     "release-it": "^12.3.0",
     "rimraf": "^3.0.2",
     "sinon": "^6.3.4",
