--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -1,22 +1,24 @@
 {
   "compilerOptions": {
+    "declaration": true,
+    "strictNullChecks": true /* Enable strict null checks. */,
+    "target": "es2015",
+    "outDir": "dist",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "rootDir": "lib",
     "allowJs": true,
     "checkJs": false,
-    "outDir": "dist",
     "removeComments": true,
-    "sourceMap": false,
     "esModuleInterop": true, // Because of JSONPath
     "typeRoots": ["node_modules/@types", "types"],
     "allowSyntheticDefaultImports": true,
-    "target": "es2015",
-    "moduleResolution": "node",
-    "module": "commonjs",
     "noEmit": false,
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "strict": true,
     "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
-    "strictNullChecks": true /* Enable strict null checks. */,
     "strictFunctionTypes": true /* Enable strict checking of function types. */,
     "strictPropertyInitialization": true /* Enable strict checking of property initialization in classes. */,
     "noImplicitThis": true /* Raise error on 'this' expressions with an implied 'any' type. */,
