--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -75,7 +75,8 @@
         "@typescript-eslint/require-await": "warn", // TODO(bkendall): remove, allow to error.
         "@typescript-eslint/unbound-method": "warn", // TODO(bkendall): remove, allow to error.
         "@typescript-eslint/no-explicit-any": "off", // TODO(bkendall): remove, allow to error.
-
+        "@typescript-eslint/no-this-alias": "off",
+        "no-invalid-this": "warn", // TODO(bkendall): remove, allow to error.
         "camelcase": "warn", // TODO(bkendall): remove, allow to error.
         "jsdoc/require-param-type": "off",
         "jsdoc/require-returns-type": "off",
@@ -97,7 +98,6 @@
         "@typescript-eslint/explicit-function-return-type": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-misused-promises": "off",
-        "@typescript-eslint/no-this-alias": "off",
         "@typescript-eslint/no-use-before-define": "off",
         "@typescript-eslint/no-var-requires": "off",
         "@typescript-eslint/prefer-includes": "off",
