--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "prepublish": "npm run clean && npm run tsc -- --build tsconfig.publish.json",
     "clean": "rimraf dist",
     "lint": "eslint --ext .ts lib/ tests/",
-    "mocha-single": "nyc --reporter=html mocha --require ts-node/register --require source-map-support/register --require tests/helpers/mocha-bootstrap.js --timeout=1000 --",
+    "mocha-single": "nyc --reporter=html mocha",
     "release": "release-it",
     "fix": "eslint -ext .ts lib/ tests/ --fix",
     "pretest": "npm run lint",
-    "test": "nyc --reporter=html --reporter=text-summary mocha --require ts-node/register --require source-map-support/register --require tests/helpers/mocha-bootstrap.js --bail --check-leaks --reporter spec \"./tests/**/*.spec.ts\"",
+    "test": "nyc --reporter=html --reporter=text-summary mocha --check-leaks --reporter spec \"./tests/**/*.spec.ts\"",
     "posttest": "nyc check-coverage",
     "docs-gen": "doctoc README.md Mods.md --github --no-title",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
@@ -86,7 +86,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jsdoc": "^22.1.0",
     "eslint-plugin-prettier": "^3.1.0",
-    "mocha": "^7.1.2",
+    "mocha": "^8.2.1",
     "nyc": "^14.1.1",
     "prettier": "^1.19.0",
     "release-it": "^13.6.6",
