--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "homepage": "https://github.com/lpezet/etl-js#readme",
   "dependencies": {
+    "datapackage": "^1.1.9",
     "google-auth-library": "^6.0.1",
     "jsonpath-plus": "^4.0.0",
     "log4js": "^6.1.2",
