--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "datapackage": "^1.1.9",
     "google-auth-library": "^6.0.1",
+    "jmespath": "^0.15.0",
     "jsonpath-plus": "^4.0.0",
     "log4js": "^6.1.2",
     "open": "^7.0.4",
@@ -71,6 +72,8 @@
     "@types/chai": "^4.1.6",
     "@types/chai-as-promised": "^7.1.0",
     "@types/jest": "^25.2.2",
+    "@types/jmespath": "^0.15.0",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^10.17.17",
     "@types/sinon": "^5.0.5",
     "@types/sinon-chai": "^3.2.2",
