Excluding some debug logs from coverage. Added tests for MySQLImports Mod and Local Executor.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "allowJs": true,
     "checkJs": false,
     "outDir": "dist",
-    "removeComments": true,
+    "removeComments": false /* to be able to ignore some lines from coverage */,
     "sourceMap": true,
     "esModuleInterop": true, // Because of JSONPath
     "typeRoots": ["node_modules/@types", "types"],
