--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pretest": "npm run lint",
     "test": "nyc --reporter=html --reporter=text-summary mocha --check-leaks --reporter spec \"./tests/**/*.spec.ts\"",
     "posttest": "nyc check-coverage",
-    "docs-gen": "doctoc README.md Mods.md --github --no-title",
+    "docs-gen": "doctoc README.md Mods.md ModsDev.md --github --no-title",
     "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
